--- a/web/src/components/download-button/style.css
+++ b/web/src/components/download-button/style.css
@@ -2,7 +2,9 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  justify-content: center;
   height: 60px;
+  width: fit-content;
   background-color: #212121;
   border-radius: 10px;
   border: 1px solid #0E0E0E;
@@ -34,4 +36,17 @@
   line-height: 1;
   font-size: 18.5px;
   white-space: nowrap;
+}
+
+@media (max-width: 440px) {
+  .download-button {
+    height: 50px;
+    padding: 0 10px 0 45px;
+    border-radius: 8px;
+    background-position: 10px center;
+  }
+
+  .download-button span {
+    line-height: 1;
+  }
 }
