--- a/web/src/pages/game-detail/style.css
+++ b/web/src/pages/game-detail/style.css
@@ -1,22 +1,22 @@
-.page-games .main > .banner {
+.page-games .main>.banner {
   border-radius: var(--container-border-radius);
   background-color: var(--container-color);
   height: 300px;
   margin-bottom: var(--margin-big);
 }
 
-.page-games .main > .content {
+.page-games .main>.content {
   border-radius: var(--container-border-radius);
   background-color: var(--container-color);
 }
 
-.page-games .main > .content .app-info {
+.page-games .main>.content .app-info {
   padding: var(--container-padding);
   display: flex;
   align-items: center;
 }
 
-.page-games .main > .content .app-info .app-icon {
+.page-games .main>.content .app-info .app-icon {
   display: block;
   width: 66px;
   height: 66px;
@@ -25,50 +25,45 @@
   margin-right: 20px;
 }
 
-.page-games .main > .content .app-info .app-icon img {
+.page-games .main>.content .app-info .app-icon img {
   display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.page-games .main > .content .app-info .data {
+.page-games .main>.content .app-info .data {
   flex: 1;
 }
 
-.page-games .main > .content .app-info .data h1 {
+.page-games .main>.content .app-info .data h1 {
   display: block;
   color: var(--title-color);
   font-size: var(--h2-font-size);
   margin: 0;
 }
 
-.page-games .main > .content .app-info .data p {
+.page-games .main>.content .app-info .data p {
   display: block;
   color: var(--text-color);
   font-size: var(--text-font-size);
   margin: 0;
 }
 
-.page-games .main > .content .app-info .download {
-  display: flex;
-  align-items: center;
-}
-
-.page-games .main > .content .app-interface {
+.page-games .main>.content .app-interface {
   background-color: rgba(0, 0, 0, 0.2);
   padding: var(--container-padding);
   overflow: auto;
 }
 
-.page-games .main > .content .app-interface .list {
+.page-games .main>.content .app-interface .list {
   display: flex;
   align-items: center;
   justify-content: center;
   width: max-content;
 }
 
-.page-games .main > .content .app-interface img {
+.page-games .main>.content .app-interface img {
   display: block;
   width: 240px;
   margin: 0 20px;
@@ -76,69 +71,64 @@
   background-color: rgba(0, 0, 0, 0.2);
 }
 
-.page-games .main > .content article {
+.page-games .main>.content article {
   padding: var(--container-padding);
 }
 
-.page-games .main > .content article p {
+.page-games .main>.content article p {
   color: var(--text-color);
   margin: 0 0 var(--margin-small) 0;
 }
 
-.page-games .main > .content article .download {
-  width: min-content;
+.page-games .main>.content article .download {
   margin: 0 auto;
 }
 
 .page-games .download-bar {
   display: none;
-  position: sticky;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  background-color: rgba(35, 35, 35, 0.97);
-  z-index: 99;
-  padding: 15px 0;
-  align-items: center;
-  justify-content: center;
 }
 
 @media (max-width: 800px) {
-  .page-games .main > .content .app-info {
+  .page-games .main>.content {
+    margin-bottom: 20px;
+  }
+
+  .page-games .main>.content .app-info {
     align-items: flex-start;
   }
 
-  .page-games .main > .content .app-info .app-icon {
+  .page-games .main>.content .app-info .app-icon {
     width: 60px;
     height: 60px;
     margin-right: 12px;
     border-radius: 10px;
   }
 
-  .page-games .main > .content .app-info .data p {
+  .page-games .main>.content .app-info .data p {
     line-height: 1.2;
     font-size: 14px;
   }
 
-  .page-games .main > .content .app-info .download {
+  .page-games .main>.content .app-info .download {
     display: none;
   }
 
-  .page-games .main > .content article .download {
+  .page-games .main>.content article .download {
     display: none;
   }
 
   .page-games .download-bar {
     display: flex;
+    margin: 0 auto;
   }
 }
 
 @media (max-width: 440px) {
-  .page-games .main > .banner {
+  .page-games .main>.banner {
     display: none;
   }
 
-  .page-games .main > .content .app-interface img {
+  .page-games .main>.content .app-interface img {
     margin: 0 10px;
     width: 200px;
   }
